Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47950

Wrong screen reported when starting not on the primary screen on Mac OSX.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.5.0
    • QPA
    • None
    • Mac OSX 10.10.3, 2 screens, "Mirror Displays" disabled.
    • macOS
    • db2675d6fdb0d44fe1b040eda47f75e8bb35ce7a

    Description

      Operation:
      Fire up an app on the secondary screen (the one without the menu bar). Enquire the window handle for the screen.

      Expected result:
      The secondary screen returned.

      Actual result:
      The primary screen returned.

      More info:
      When starting the app on the secondary screen, the primary screen is incorrectly returned. After moving the app window onto the primary screen, still the primary screen is reported (now correctly). After moving the app window back onto the secondary screen, the secondary screen is finally correctly reported. See the attached app. Here the output from the app, interleaved with the commentary what was done in the test with the app window.
      "Color LCD" is the primary screen (the one with the menu bar)
      "DELL P2414H" is the secondary screen (the one without the menu bar)

      // start the application on the secondary screen, expect "DELL P2414H", but the wrong screen is reported
      screen = 0x7fdfb2e63d10: Color LCD
      // move the application to the primary screen, expect "Color LCD", correct behaviour
      screen = 0x7fdfb2e63d10: Color LCD
      // move back to the secondary screen, epxect "DELL P2414H", correct behaviour
      screen = 0x7fdfb2e32d10: DELL P2414H
      

      As a very unpleasant consequence, screenChanged signal is not fired when moving between the screens the very first time, which makes our app miss this important change.

      Note that the other way round (starting on the primary screen and shifting onto the secondary), works fine.

      Attachments

        1. PrimaryScreen.zip
          4 kB
          Michal Ejdys
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sorvig Morten Sørvig
            mejdys Michal Ejdys
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes